--- a/nginx/devstat.conf
+++ b/nginx/devstat.conf
@@ -12,3 +12,18 @@ server {
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 }
+
+server {
+    listen 80;
+
+    server_name api.devstat.localhost api.devstat.thekev.in;
+
+    location / {
+        proxy_pass         http://127.0.0.1:28002;
+        proxy_redirect     off;
+
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
+}
