--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '2'
 
 services:
+  consul:
+    build: consul/
+    ports:
+      - "28500:8500"
+
   nginx:
     build: nginx/
     network_mode: host
