--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ version: '2'
 services:
   consul:
     build: consul/
-    ports:
-      - "28500:8500"
+    hostname: consul
+    network_mode: host
 
   nginx:
     build: nginx/
+    hostname: nginx
     network_mode: host
     ports:
       - "80:80"
