--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: consul/
     hostname: consul
     network_mode: host
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
   nginx:
     build: nginx/
