--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:1.11.3-alpine
 MAINTAINER Kevin James <KevinJames@thekev.in>
 
-COPY . /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY config/* /etc/nginx/conf.d/
