--- a/nginx/config/sensu.conf
+++ b/nginx/config/sensu.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
 
-    server_name consul.localhost consul.thekev.in status.localhost status.thekev.in;
+    server_name sensu.localhost sensu.thekev.in status.localhost status.thekev.in;
 
     location / {
-        proxy_pass         http://127.0.0.1:8500;
+        proxy_pass         http://127.0.0.1:3000;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
