move to environment-based check subscriptions

--- a/sensu/config/config.json
+++ b/sensu/config/config.json
@@ -9,14 +9,7 @@
     "port": 4567
   },
   "client": {
-    "address": "sensu",
-    "subscriptions": [
-      "default",
-      "devstat",
-      "phabricator",
-      "thekev",
-      "youshouldread"
-    ]
+    "address": "sensu"
   },
   "handlers": {
     "default": {
