--- a/docker-compose.awsbox.yml
+++ b/docker-compose.awsbox.yml
@@ -3,4 +3,4 @@ version: '2'
 services:
   sensu:
     environment:
-      - SENSU_CLIENT_SUBSCRIPTIONS=default,devstat,thekev
+      - SENSU_CLIENT_SUBSCRIPTIONS=default,devstat,jarvis,thekev
