mount ./webroot for letsencrypt

--- a/nginx/config/default.conf
+++ b/nginx/config/default.conf
@@ -7,6 +7,11 @@ server {
         index  index.html index.htm;
     }
 
+    location ~ /.well-known {
+        root   /usr/share/nginx/volume;
+        allow  all;
+    }
+
     # TODO: 404 page
     # error_page  404              /404.html;
 
