--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -11,6 +11,11 @@ server {
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
+
+    location ~ /.well-known {
+        root   /usr/share/nginx/volume;
+        allow  all;
+    }
 }
 
 server {
@@ -25,5 +30,10 @@ server {
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
+
+    location ~ /.well-known {
+        root   /usr/share/nginx/volume;
+        allow  all;
     }
 }
