--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     network_mode: host
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./webroot:/usr/share/nginx/volume
+      - /etc/letsencrypt:/ssl
