--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -1,7 +1,13 @@
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name devstat.localhost devstat.thekev.in;
+
+    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
+    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
     location / {
         proxy_pass         http://127.0.0.1:28001;
@@ -20,8 +26,14 @@ server {
 
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name api.devstat.localhost api.devstat.thekev.in;
+
+    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
+    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
     location / {
         proxy_pass         http://127.0.0.1:28002;
