--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -1,7 +1,13 @@
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name www.localhost www.thekev.in thekev.in;
+
+    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
+    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
     location / {
         proxy_pass         http://127.0.0.1:28005;
