--- a/nginx/config/youshouldread.conf
+++ b/nginx/config/youshouldread.conf
@@ -1,7 +1,13 @@
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name youshouldread.localhost youshouldread.thekev.in ysr.localhost ysr.thekev.in;
+
+    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
+    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
     location / {
         proxy_pass         http://127.0.0.1:28003;
@@ -20,8 +26,14 @@ server {
 
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name api.youshouldread.localhost api.youshouldread.thekev.in api.ysr.localhost api.ysr.thekev.in;
+
+    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
+    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
     location / {
         proxy_pass         http://127.0.0.1:28004;
