--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,17 @@ events {
     worker_connections  1024;
 }
 
+gzip               on;
+gzip_comp_level    7;
+gzip_http_version  1.1;
+
+gzip_vary          on;
+gzip_buffers       16 8k;
+
+gzip_disable       "msi6"
+
+gzip_types         text/plain text/html text/css application/javascript;
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
