--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:1.11.3-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY fragment/ /etc/nginx/fragment
 COPY config/* /etc/nginx/conf.d/
