--- a/nginx/config/league.conf
+++ b/nginx/config/league.conf
@@ -6,9 +6,6 @@ server {
 
     server_name league.localhost league.thekev.in;
 
-    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
-    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
-
     location / {
         proxy_pass         http://127.0.0.1:28006;
         proxy_redirect     off;
@@ -18,8 +15,5 @@ server {
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    location ~ /.well-known {
-        root   /usr/share/nginx/volume;
-        allow  all;
-    }
+    include /etc/nginx/fragment/cert.conf;
 }
