--- a/nginx/config/youshouldread.conf
+++ b/nginx/config/youshouldread.conf
@@ -6,9 +6,6 @@ server {
 
     server_name youshouldread.localhost youshouldread.thekev.in ysr.localhost ysr.thekev.in;
 
-    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
-    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
-
     location / {
         proxy_pass         http://127.0.0.1:28003;
         proxy_redirect     off;
@@ -18,10 +15,7 @@ server {
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    location ~ /.well-known {
-        root   /usr/share/nginx/volume;
-        allow  all;
-    }
+    include /etc/nginx/fragment/cert.conf;
 }
 
 server {
@@ -32,9 +26,6 @@ server {
 
     server_name api.youshouldread.localhost api.youshouldread.thekev.in api.ysr.localhost api.ysr.thekev.in;
 
-    ssl_certificate /ssl/live/thekev.in/fullchain.pem;
-    ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
-
     location / {
         proxy_pass         http://127.0.0.1:28004;
         proxy_redirect     off;
@@ -44,8 +35,5 @@ server {
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    location ~ /.well-known {
-        root   /usr/share/nginx/volume;
-        allow  all;
-    }
+    include /etc/nginx/fragment/cert.conf;
 }
