perf(ssl): optimize ssl config

--- a/nginx/fragment/cert.conf
+++ b/nginx/fragment/cert.conf
@@ -1,3 +1,5 @@
+include /etc/nginx/fragment/ssl.conf;
+
 ssl_certificate /ssl/live/thekev.in/fullchain.pem;
 ssl_certificate_key /ssl/live/thekev.in/privkey.pem;
 
