--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -13,6 +13,24 @@ server {
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+
+        location ~* \.(?:xml)$ {
+            expires      1h;
+            access_log   off;
+            add_header   Cache-Control "public";
+        }
+
+        location ~* \.(?:jpg|png)$ {
+            expires      1M;
+            access_log   off;
+            add_header   Cache-Control "public";
+        }
+
+        location ~* \.(?:css|js)$ {
+            expires      1y;
+            access_log   off;
+            add_header   Cache-Control "public";
+        }
     }
 
     include /etc/nginx/fragment/cert.conf;
