--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -30,6 +30,8 @@ server {
             expires      1y;
             access_log   off;
             add_header   Cache-Control "public";
+
+            add_header   Vary "Accept-Encoding";
         }
     }
 
