feat(thekev): disable location blocks in proxy pass

--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -14,25 +14,25 @@ server {
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
 
-        location ~* \.(?:xml)$ {
-            expires      1h;
-            access_log   off;
-            add_header   Cache-Control "public";
-        }
+        # location ~* \.(?:xml)$ {
+        #     expires      1h;
+        #     access_log   off;
+        #     add_header   Cache-Control "public";
+        # }
 
-        location ~* \.(?:jpg|png)$ {
-            expires      1M;
-            access_log   off;
-            add_header   Cache-Control "public";
-        }
+        # location ~* \.(?:jpg|png)$ {
+        #     expires      1M;
+        #     access_log   off;
+        #     add_header   Cache-Control "public";
+        # }
 
-        location ~* \.(?:css|js)$ {
-            expires      1y;
-            access_log   off;
-            add_header   Cache-Control "public";
+        # location ~* \.(?:css|js)$ {
+        #     expires      1y;
+        #     access_log   off;
+        #     add_header   Cache-Control "public";
 
-            add_header   Vary "Accept-Encoding";
-        }
+        #     add_header   Vary "Accept-Encoding";
+        # }
     }
 
     include /etc/nginx/fragment/cert.conf;
