--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   nginx:
-    image: thekevjames/infrastructure-nginx:latest
+    image: thekevjames/nginx:latest
     deploy:
       mode: replicated
       replicas: 1
@@ -17,15 +17,25 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./webroot:/usr/share/nginx/volume
-    secrets:
-      - source: ssl_fullchain
-        target: /ssl/fullchain.pem
-      - source: ssl_privkey
-        target: /ssl/privkey.pem
+      - certs:/ssl/certs
+      - webroot:/usr/share/nginx/volume
 
-secrets:
-  ssl_fullchain:
-    file: /etc/letsencrypt/live/thekev.in/fullchain.pem
-  ssl_privkey:
-    file: /etc/letsencrypt/live/thekev.in/privkey.pem
+  ssl:
+    image: thekevjames/ssl:latest
+    deploy:
+      mode: replicated
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        window: 20s
+      update_config:
+        parallelism: 1
+        monitor: 20s
+    volumes:
+      - certs:/etc/letsencrypt/live/thekev.in
+      - webroot:/etc/letsencrypt/webroot
+
+volumes:
+  certs:
+  webroot:
