feat(infra): bugfixes for service deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,8 @@ jobs:
               docker push "thekevjames/ssl:latest"
             fi
 
-    deploy:
+  deploy:
+    steps:
       - deploy:
           name: deploy images
           command: |
