--- a/nginx/fragment/cert.conf
+++ b/nginx/fragment/cert.conf
@@ -1,7 +1,7 @@
 include /etc/nginx/fragment/ssl.conf;
 
-ssl_certificate /run/secrets/fullchain.pem;
-ssl_certificate_key /run/secrets/privkey.pem;
+ssl_certificate /ssl/certs/thekev.in/fullchain.pem;
+ssl_certificate_key /ssl/certs/thekev.in/privkey.pem;
 
 location ~ /.well-known {
     root   /usr/share/nginx/volume;
