fix(ci): fix missing circle command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,9 @@ jobs:
             fi
 
   deploy:
+    docker:
+      - image: docker:17.05.0-ce-git
+
     steps:
       - deploy:
           name: deploy images
