--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -7,7 +7,7 @@ server {
     server_name www.localhost www.thekev.in thekev.in;
 
     location / {
-        proxy_pass         http://127.0.0.1:28005;
+        proxy_pass         http://thekevjames_thekevin;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
