--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             docker push "thekevjames/nginx:${CIRCLE_SHA1}"
             docker push "thekevjames/nginx:latest"
 
-  ssl:
+  build-ssl:
     working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
