--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: |
             pre-commit run --all-files
 
-  build-nginx:
+  nginx:
     working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
@@ -39,7 +39,7 @@ jobs:
               docker push "thekevjames/nginx:latest"
             fi
 
-  build-ssl:
+  ssl:
     working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
