feat(infra): proxy for thekev.in regardless of docker stack

--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -7,7 +7,7 @@ server {
     server_name www.localhost www.thekev.in thekev.in;
 
     location / {
-        proxy_pass         http://thekevjames_thekevin;
+        proxy_pass         http://thekevin;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
