feat(infra): proxy league-utils-api through swarm

--- a/nginx/config/league.conf
+++ b/nginx/config/league.conf
@@ -7,7 +7,7 @@ server {
     server_name league.localhost league.thekev.in;
 
     location / {
-        proxy_pass         http://172.17.0.1:28006;
+        proxy_pass         http://league_utils_api;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
