--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -7,7 +7,7 @@ server {
     server_name devstat.localhost devstat.thekev.in;
 
     location / {
-        proxy_pass         http://172.17.0.1:28001;
+        proxy_pass         http://devstat_web;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
@@ -27,7 +27,7 @@ server {
     server_name api.devstat.localhost api.devstat.thekev.in;
 
     location / {
-        proxy_pass         http://172.17.0.1:28002;
+        proxy_pass         http://devstat_server;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
