feat(infra): proxy ysr through swarm

--- a/nginx/config/youshouldread.conf
+++ b/nginx/config/youshouldread.conf
@@ -7,7 +7,7 @@ server {
     server_name youshouldread.localhost youshouldread.thekev.in ysr.localhost ysr.thekev.in;
 
     location / {
-        proxy_pass         http://172.17.0.1:28003;
+        proxy_pass         http://ysr_client:4000;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
@@ -27,7 +27,7 @@ server {
     server_name api.youshouldread.localhost api.youshouldread.thekev.in api.ysr.localhost api.ysr.thekev.in;
 
     location / {
-        proxy_pass         http://127.0.0.1:28004;
+        proxy_pass         http://ysr_server;
         proxy_redirect     off;
 
         proxy_set_header   Host              $host;
