chore(proxy): remove localhost bindings

--- a/nginx/config/league.conf
+++ b/nginx/config/league.conf
@@ -4,7 +4,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name league.localhost league.thekev.in;
+    server_name league.thekev.in;
 
     location / {
         proxy_pass         http://league_utils_api;
