--- a/nginx/config/netdata.conf
+++ b/nginx/config/netdata.conf
@@ -4,7 +4,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name netdata.localhost netdata.thekev.in status.localhost status.thekev.in;
+    server_name netdata.thekev.in status.thekev.in;
 
     location / {
         proxy_pass         http://172.17.0.1:19999;
