--- a/nginx/config/youshouldread.conf
+++ b/nginx/config/youshouldread.conf
@@ -4,7 +4,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name youshouldread.localhost youshouldread.thekev.in ysr.localhost ysr.thekev.in;
+    server_name youshouldread.thekev.in ysr.thekev.in;
 
     location / {
         proxy_pass         http://ysr_client:4000;
@@ -24,7 +24,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name api.youshouldread.localhost api.youshouldread.thekev.in api.ysr.localhost api.ysr.thekev.in;
+    server_name api.youshouldread.thekev.in api.ysr.thekev.in;
 
     location / {
         proxy_pass         http://ysr_server;
