--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -4,7 +4,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name devstat.localhost devstat.thekev.in;
+    server_name devstat.thekev.in;
 
     location / {
         proxy_pass         http://devstat_web;
@@ -24,7 +24,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name api.devstat.localhost api.devstat.thekev.in;
+    server_name api.devstat.thekev.in;
 
     location / {
         proxy_pass         http://devstat_server;
