perf(thekev): cache css, js, and pngs

--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -14,25 +14,13 @@ server {
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
 
-        # location ~* \.(?:xml)$ {
-        #     expires      1h;
-        #     access_log   off;
-        #     add_header   Cache-Control "public";
-        # }
+        location ~* \.(?:css|js|png)$ {
+            add_header   Cache-Control "public";
+            etag         on;
+            expires      12h;
 
-        # location ~* \.(?:jpg|png)$ {
-        #     expires      1M;
-        #     access_log   off;
-        #     add_header   Cache-Control "public";
-        # }
-
-        # location ~* \.(?:css|js)$ {
-        #     expires      1y;
-        #     access_log   off;
-        #     add_header   Cache-Control "public";
-
-        #     add_header   Vary "Accept-Encoding";
-        # }
+            access_log   off;
+        }
     }
 
     include /etc/nginx/fragment/cert.conf;
