--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -13,14 +13,19 @@ server {
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
 
-        location ~* \.(?:css|js|png)$ {
-            add_header   Cache-Control "public";
-            etag         on;
-            expires      12h;
+    location ~* \.(?:css|js|png)$ {
+        proxy_pass         http://thekevin;
+        proxy_redirect     off;
 
-            access_log   off;
-        }
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+
+        add_header   Cache-Control "public";
+        etag         on;
+        expires      12h;
     }
 
     include /etc/nginx/fragment/cert.conf;
