--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -23,9 +23,9 @@ server {
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
 
-        proxy_set_header   Cache-Control "public";
+        add_header         Cache-Control "public";
         etag               on;
-        expires            1d;
+        expires            1w;
     }
 
     include /etc/nginx/fragment/cert.conf;
