--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -8,11 +8,7 @@ server {
 
     location / {
         proxy_pass         http://devstat_web;
-        proxy_redirect     off;
-
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        include            /etc/nginx/fragment/proxy.conf;
     }
 
     include /etc/nginx/fragment/cert.conf;
@@ -28,11 +24,7 @@ server {
 
     location / {
         proxy_pass         http://devstat_server;
-        proxy_redirect     off;
-
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        include            /etc/nginx/fragment/proxy.conf;
     }
 
     include /etc/nginx/fragment/cert.conf;
