--- a/nginx/config/netdata.conf
+++ b/nginx/config/netdata.conf
@@ -8,11 +8,7 @@ server {
 
     location / {
         proxy_pass         http://172.17.0.1:19999;
-        proxy_redirect     off;
-
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        include            /etc/nginx/fragment/proxy.conf;
     }
 
     include /etc/nginx/fragment/cert.conf;
