--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -8,16 +8,12 @@ server {
 
     location / {
         proxy_pass         http://thekevin;
-        proxy_redirect     off;
-
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        include            /etc/nginx/fragment/proxy.conf;
     }
 
     location ~* \.(?:css|js|png)$ {
         proxy_pass         http://thekevin;
-        proxy_redirect     off;
+        include            /etc/nginx/fragment/proxy.conf;
 
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
