--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,29 +9,27 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
 
-    # log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                   '$status $body_bytes_sent "$http_referer" '
-    #                   '"$http_user_agent" "$http_x_forwarded_for"';
-    # access_log  /dev/stdout  main;
-    access_log off;
+    access_log          off;
 
-    sendfile           on;
+    sendfile            on;
 
-    keepalive_timeout  65;
+    keepalive_timeout   65;
 
-    gzip               on;
-    gzip_comp_level    7;
-    gzip_http_version  1.1;
+    gzip                on;
+    gzip_comp_level     7;
+    gzip_http_version   1.1;
 
-    gzip_vary          on;
-    gzip_buffers       16 8k;
+    gzip_vary           on;
+    gzip_buffers        16 8k;
 
-    gzip_disable       "msi6"
+    gzip_disable        "msi6"
 
-    gzip_types         text/plain text/html text/css application/javascript;
+    gzip_types          text/plain text/html text/css application/javascript;
+
+    gzip_proxy          any;
 
     include /etc/nginx/conf.d/*.conf;
 }
