fix(proxy): fix gzip_proxied typo

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     gzip_types          text/plain text/html text/css application/javascript;
 
-    gzip_proxy          any;
+    gzip_proxied        any;
 
     include /etc/nginx/conf.d/*.conf;
 }
