fix(proxy): fix gzip disable regex

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,8 +24,9 @@ http {
 
     gzip_vary           on;
     gzip_buffers        16 8k;
+    gzip_min_length     20;
 
-    gzip_disable        "msi6"
+    gzip_disable        "msie6"
 
     gzip_types          text/plain text/html text/css application/javascript;
 
