--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -1,6 +1,13 @@
 server {
     listen 80;
     listen [::]:80;
+
+    server_name thekev.in;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
