feat(ssl): add ssl redirection everywhere

--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name thekev.in;
+    server_name www.thekev.in thekev.in;
 
     return 301 https://$server_name$request_uri;
 }
