--- a/nginx/config/devstat.conf
+++ b/nginx/config/devstat.conf
@@ -1,6 +1,13 @@
 server {
     listen 80;
     listen [::]:80;
+
+    server_name devstat.thekev.in;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
@@ -17,6 +24,13 @@ server {
 server {
     listen 80;
     listen [::]:80;
+
+    server_name api.devstat.thekev.in;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
