--- a/nginx/config/thekev.conf
+++ b/nginx/config/thekev.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name www.thekev.in thekev.in;
+    server_name thekev.in www.thekev.in;
 
     return 301 https://$server_name$request_uri;
 }
@@ -11,7 +11,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name www.thekev.in thekev.in;
+    server_name thekev.in www.thekev.in;
 
     location / {
         proxy_pass         http://thekevin;
