--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,6 @@
 repository:
   name: infrastructure
-  description: personal infrastructure for deploying/routing/etc.
+  description: terraformed personal infrastructure
   private: false
 
   has_issues: true
