--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run: echo "${GCLOUD_SERVICE_KEY}" > "${GOOGLE_APPLICATION_CREDENTIALS}"
       - checkout
       - run: terraform init
-      - run: terraform apply
+      - run: terraform apply -auto-approve
 
 workflows:
   version: 2
