--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   lint:
     docker:
-      - image: python:3.6.4
+      - image: python:3.7.1
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: /gcloud-service-key.json
     steps:
@@ -13,11 +13,19 @@ jobs:
           command: |
             apt-get update
             apt-get install -y unzip
-            curl -o /terraform.zip https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip
+            curl -o /terraform.zip https://releases.hashicorp.com/terraform/0.11.11/terraform_0.11.11_linux_amd64.zip
             unzip /terraform.zip -d /usr/local/bin
             chmod a+x /usr/local/bin/terraform
       - checkout
       - run: pip install pre-commit
+      - restore_cache:
+          keys:
+            - cache-pre-commit-{{ checksum ".pre-commit-config.yaml" }}
+      - run: pre-commit install-hooks
+      - save_cache:
+          key: cache-pre-commit-{{ checksum ".pre-commit-config.yaml" }}
+          paths:
+            - ~/.cache/pre-commit
       - run: terraform init
       - run: pre-commit run --all-files
 
