--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.0.0
+    rev: v2.1.0
     hooks:
     -   id: check-case-conflict
     -   id: check-executables-have-shebangs
@@ -18,12 +18,16 @@ repos:
     -   id: mixed-line-ending
         args: [--fix=lf]
     -   id: trailing-whitespace
--   repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.7.3
+-   repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.2.0
     hooks:
-    -   id: terraform_fmt
-    -   id: terraform_validate_with_variables
+    -   id: rst-backticks
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-markup
     rev: v1.0.0
     hooks:
     -   id: rst-linter
+-   repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.10.0
+    hooks:
+    -   id: terraform_fmt
+    -   id: terraform_validate_with_variables
